Change link to libadama.js to working HTTPS URL.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </g>
   <g id="marks"></g>
 </svg>
-<script src="https://releases.adama-platform.com/libadama.js"></script>
+<script src="https://aws-us-east-2.adama-platform.com/libadama.js"></script>
 <script src="index.js"></script>
 </body>
 </html>
